--- a/QAOA/qaoa_qiskit_tsp.ipynb
+++ b/QAOA/qaoa_qiskit_tsp.ipynb
@@ -322,6 +322,9 @@
     "algorithm_globals.random_seed = 123\n",
     "seed = 10598\n",
     "backend = Aer.get_backend(\"aer_simulator_statevector\")\n",
+    "#alternative ibm backend\n",
+    "#provider = IBMQ.load_account()\n",
+    "#backend = provider.get_backend(\"ibm_simulator_statevector\")\n",
     "quantum_instance = QuantumInstance(backend, seed_simulator=seed, seed_transpiler=seed)"
    ]
   },
