--- a/QAOA_TSP/qaoa_tsp_qiskit_attempt.ipynb
+++ b/QAOA_TSP/qaoa_tsp_qiskit_attempt.ipynb
@@ -321,7 +321,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.5 ('base')",
+   "display_name": "Python 3.10.4 ('quantum_env')",
    "language": "python",
    "name": "python3"
   },
@@ -335,12 +335,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.10.4"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "e556c3b9e544edafb913d88cbc8be25fa5b7ab065246ab3d0411f3bf51748324"
+    "hash": "6e4a9c963e4da63722c19eeace38043fe7ace8c734b43af3fa5f2346c1379d63"
    }
   }
  },
