--- a/extra/QAOA_TSP/alternate_qaoa_qiskit_tsp.ipynb
+++ b/extra/QAOA_TSP/alternate_qaoa_qiskit_tsp.ipynb
@@ -167,7 +167,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Create Circuit (except it doesn't work lol)"
+    "# Create Circuit"
    ]
   },
   {
@@ -248,7 +248,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Optimization Method (doesn't work yet either)"
+    "# Optimization Method"
    ]
   },
   {
